SG-2004-02-18-0: Cleanup:   first part of doing the event client matching in
                            the event master thread.
                 Changed:   master
                 Review:    DT

AD-2004-02-18-0: Bugfix:    Did fix 'qconf -secl' and 'qconf -sss'.
                 Changed:   qmaster, evm
                 Review:    SG
                 Issue:     666

DT-2004-02-18-0: Bugfix:    Fixed backslash line continuation for all objects
                            in qconf.  Will break on spaces or commas.
                            Propogated removal of SGE/SGEEE through qconf and
                            flatfile spooling.
                            Fixed build on Solaris x86.
                            Fixed other minor qconf and flatfile spooling
                            issues.
                 Changed:   qconf, qmon, flatfile spooling

AS-2004-02-17-0: Cleanup:   aimk cleanup, #define cleanup, IRIX 6.5 compile

SD-2004-02-17-0: Cleanup:   - Removed all jobclass references from qmon,
                              scheduler, and scheduler configuration
                            - Added display of users which map to the
                              default user node to qmon
                 Changed:   qmon
                 Issue:     636, 643

JG-2004-02-17-0: Bugfix:    Mirror interface didn't propagate event client 
                            errors.
                            Make qevent analyze return code from mirror 
                            interface.
                 Review:    CR

AA-2004-02-17-0: Bugfix:    Shell attribute was missing in Qconfig
                            Segv when attribute could not be applied
                 Changed:   qmon
                 Review:    EB

AH-2004-02-17-0: Bugfix:    Fixed dispatching of parallel jobs with reservation 
                            disabled.
                 Review:    EB

DT-2004-02-17-0: Bugfix:    Fixed segv in qconf -msconf
                 Changed:   qconf